Fix list overflow and id

--- a/bundles/statistics/statsgrid2016/resources/scss/style.scss
+++ b/bundles/statistics/statsgrid2016/resources/scss/style.scss
@@ -174,6 +174,11 @@ div.oskari-flyout {
     /* ********************************************
     * Search styles
     * ********************************************/
+
+    .statsgrid-open-list-overflow {
+        overflow: visible;
+    }
+
     &.statsgrid-search-flyout {
         .statsgrid-search-container {
             padding: $flyoutPadding;
